fix minor bug where the username too long warning would flash upon page load

--- a/Video Syncer/wwwroot/css/site.css
+++ b/Video Syncer/wwwroot/css/site.css
@@ -170,6 +170,7 @@ body {
     line-height: 18px;
     padding: 0px 15px;
     font-size: 14px;
+    display: none;
 }
 
 #alert-using-internet-explorer {
